intigrate home api and password
